[lib]
proc-macro = true

[package]
name = "struct-record"
version = "0.1.0"
edition = "2024"
description = "Macro utility for defining structs with fields that exhaustively match enum variants, like a 'Record'"
license = "MIT OR Apache-2.0"

[dependencies]
cargo-expand = "1.0.121"
convert_case = "0.11.0"
paste = "1.0.15"
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = "2.0.117"
